...
                    password = it
                    errorMessage = null
                },
                modifier = Modifier.fillMaxWidth(),
                label = { 
                    Text(
                        "Password", 
                        color = DigiBalanceDarkBlue.copy(alpha = 0.7f)
                    ) 
                },
                placeholder = {
                    Text(
                        text = if (authMode == AuthMode.SIGN_UP) 
...
